# all-tacks

./: .gitignore  test.cpp
task 1/: task.cpp
task 3/: task.cpp
task 4/: task.cpp
task-1/: CMakeLists.txt  data.txt  main.cpp  task1.cpp  words.tst
task-1/include/: tools.h
task-1/src/: CMakeLists.txt  ImageButton.h  Main.qml  Ui_MainWindow.h  branch.h  film1.json  main.cpp  mainwindow.h  scalculator.h  scalculator.ui  task1.cpp  tools.cpp  track.h
task-2/: CMakeLists.txt  task2.cpp
task-2/.cache/clangd/index/: tack2.cpp.7495C8C7DED7AB37.idx
task-2/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
task-2/src/: CMakeLists.txt  Main.qml  cpu.cpp  dick.cpp  film2.json  geometric_figure.h  gpu.cpp  kbd.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ram.cpp  shape.h  tack2.cpp  telephone.h
task-3/: CMakeLists.txt  river.txt  task3.cpp
task-3/src/: CMakeLists.txt  file.pb.cc  file.pb.h  file.proto  main.cpp  mainb.cpp  mainb.h  mainwindow.ui  person.h  screen.h  task3.cpp
task-4/: CMakeLists.txt  task4.cpp
task-4/src/: CMakeLists.txt  task4.cpp
task-5/: questions.txt  tack5.cpp
